--- a/tools/pipelines/templates/download-api-extractor-artifact.yml
+++ b/tools/pipelines/templates/download-api-extractor-artifact.yml
@@ -8,7 +8,7 @@ parameters:
   type: string
 
 # Branch name to filter specific runs. Takes the most recent completed build which
-# matches the branch name. By default, the branch triggering this pipeline is used
+# matches the branch name.
 - name: branchName
   type: string
   
