--- a/tools/pipelines/templates/1ES/build-docker-service.yml
+++ b/tools/pipelines/templates/1ES/build-docker-service.yml
@@ -129,6 +129,9 @@ extends:
         name: Azure-Pipelines-1ESPT-ExDShared
         image: windows-2022
         os: windows
+    # Skip tagging if Github PR coming from a fork;  This skips Microsoft security checks that won't work on forks. 
+    settings:
+      skipBuildTagsForGitHubPullRequests: true
     customBuildTags:
       - ES365AIMigrationTooling
     stages:
