--- a/packages/utils/odsp-doclib-utils/package.json
+++ b/packages/utils/odsp-doclib-utils/package.json
@@ -14,6 +14,36 @@
 	"exports": {
 		".": {
 			"import": {
+				"types": "./lib/odsp-doclib-utils-public.d.mts",
+				"default": "./lib/index.mjs"
+			},
+			"require": {
+				"types": "./dist/odsp-doclib-utils-public.d.ts",
+				"default": "./dist/index.js"
+			}
+		},
+		"./beta": {
+			"import": {
+				"types": "./lib/odsp-doclib-utils-beta.d.mts",
+				"default": "./lib/index.mjs"
+			},
+			"require": {
+				"types": "./dist/odsp-doclib-utils-beta.d.ts",
+				"default": "./dist/index.js"
+			}
+		},
+		"./fruit": {
+			"import": {
+				"types": "./lib/odsp-doclib-utils-alpha.d.mts",
+				"default": "./lib/index.mjs"
+			},
+			"require": {
+				"types": "./dist/odsp-doclib-utils-alpha.d.ts",
+				"default": "./dist/index.js"
+			}
+		},
+		"./internal": {
+			"import": {
 				"types": "./lib/index.d.mts",
 				"default": "./lib/index.mjs"
 			},
@@ -25,7 +55,7 @@
 	},
 	"main": "dist/index.js",
 	"module": "lib/index.mjs",
-	"types": "dist/index.d.ts",
+	"types": "./dist/odsp-doclib-utils-public.d.ts",
 	"scripts": {
 		"api": "fluid-build . --task api",
 		"api-extractor:commonjs": "api-extractor run --local",
