test how the docs say to do it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,4 +94,10 @@
 		"**/DS_Store": true,
 	},
 	"search.followSymlinks": false,
+	"azureFunctions.deploySubpath": "api",
+	"azureFunctions.postDeployTask": "npm install (functions)",
+	"azureFunctions.projectLanguage": "JavaScript",
+	"azureFunctions.projectRuntime": "~4",
+	"debug.internalConsoleOptions": "neverOpen",
+	"azureFunctions.preDeployTask": "npm prune (functions)",
 }
