--- a/packages/runtime/datastore/package.json
+++ b/packages/runtime/datastore/package.json
@@ -172,6 +172,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_FluidDataStoreRuntime": {
+				"backCompat": false
+			}
+		}
 	}
 }
