Use parameter to pass down testCoverage value

--- a/tools/pipelines/build-api-markdown-documenter.yml
+++ b/tools/pipelines/build-api-markdown-documenter.yml
@@ -81,6 +81,7 @@ extends:
     buildDirectory: tools/api-markdown-documenter
     packageManagerInstallCommand: 'pnpm i --frozen-lockfile'
     packageManager: pnpm
+    testCoverage: ${{ variables.testCoverage }}
     tagName: api-markdown-documenter
     taskBuild: build
     taskBuildDocs: true
