--- a/tools/pipelines/build-client.yml
+++ b/tools/pipelines/build-client.yml
@@ -133,6 +133,7 @@ extends:
     interdependencyRange: ${{ parameters.interdependencyRange }}
     packageManagerInstallCommand: 'pnpm i --frozen-lockfile'
     packageManager: pnpm
+    testCoverage: ${{ variables.testCoverage }}
     buildDirectory: .
     tagName: client
     isReleaseGroup: true
