--- a/tools/pipelines/build-tinylicious.yml
+++ b/tools/pipelines/build-tinylicious.yml
@@ -41,6 +41,7 @@ extends:
     packageManagerInstallCommand: 'pnpm i --frozen-lockfile'
     packageManager: pnpm
     buildDirectory: server/routerlicious/packages/tinylicious
+    testCoverage: ${{ variables.testCoverage }}
     tagName: tinylicious
     taskBuild: build
     taskBuildDocs: false
