--- a/tools/pipelines/templates/1ES/build-npm-package.yml
+++ b/tools/pipelines/templates/1ES/build-npm-package.yml
@@ -134,6 +134,10 @@ parameters:
 - name: publish
   type: boolean
 
+# Indicates if tests should be run with code coverage analysis.
+- name: testCoverage
+  type: boolean
+
 # The `resources` specify the location and version of the 1ES Pipeline Template.
 resources:
   repositories:
@@ -241,7 +245,7 @@ extends:
                       LintName: ${{ parameters.taskLintName }}
                       PublishDocs=${{ parameters.publishDocs }}
                       Test=${{ convertToJson(parameters.taskTest) }}
-                      TestCoverage=$(testCoverage)
+                      TestCoverage=${{ parameters.testCoverage }}
                       TestResultDirs=${{ convertToJson(parameters.testResultDirs) }}
 
                     Variables:
@@ -357,7 +361,7 @@ extends:
                         parameters:
                           taskTestStep: '${{ taskTestStep }}'
                           buildDirectory: '${{ parameters.buildDirectory }}'
-                          testCoverage: ${{ eq(variables['testCoverage'], true) }}
+                          testCoverage: ${{ parameters.testCoverage }}
 
                   - ${{ if contains(convertToJson(parameters.taskTest), 'tinylicious') }}:
                     # Copy files so all artifacts we publish end up under the same parent folder.
@@ -381,7 +385,7 @@ extends:
                   # Some webpacked file using externals introduce file name with quotes in them
                   # and Istanbul's cobertura reporter doesn't escape them causing parse error when we publish
                   # A quick fix to patch the file with sed. (See https://github.com/bcoe/c8/issues/302)
-                  - ${{ if eq(variables['testCoverage'], true) }}:
+                  - ${{ if parameters.testCoverage }}:
                       - task: Bash@3
                         displayName: Check for nyc/report directory
                         inputs:
