--- a/examples/benchmarks/odspsnapshotfetch-perftestapp/tsconfig.json
+++ b/examples/benchmarks/odspsnapshotfetch-perftestapp/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": [
 		"../../../common/build/build-common/tsconfig.base.json",
-		"../../../common/build/build-common/tsconfig.cjs.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
 	],
 	"compilerOptions": {
 		"rootDir": "./src",
