--- a/examples/data-objects/inventory-app/package.json
+++ b/examples/data-objects/inventory-app/package.json
@@ -43,6 +43,7 @@
 		"@fluid-example/example-utils": "workspace:~",
 		"@fluidframework/aqueduct": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
+		"@fluidframework/datastore-definitions": "workspace:~",
 		"@fluidframework/tree": "workspace:~",
 		"react": "^17.0.1"
 	},
@@ -67,6 +68,7 @@
 		"prettier": "~3.0.3",
 		"puppeteer": "^17.1.3",
 		"rimraf": "^4.4.0",
+		"source-map-loader": "^2.0.0",
 		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.3.0",
 		"typescript": "~5.1.6",
