--- a/tools/pipelines/build-docs-website-deploy.yml
+++ b/tools/pipelines/build-docs-website-deploy.yml
@@ -6,8 +6,8 @@
 name: $(Build.BuildId)
 
 schedules:
-  - cron: "0 4 * * *"
-    displayName: Daily 8pm (PST) website deploy
+  - cron: "0 */4 * * *"
+    displayName: Website deploy with 4 hour increments
     branches:
       include:
         - main
@@ -34,6 +34,7 @@ parameters:
     - old
 
 variables:
+- group: storage-vars
 - name: shouldDeploy
   value: ${{ or(
     eq(parameters.deployOverride, 'force'),
@@ -62,18 +63,7 @@ stages:
             branchName: main
             buildVersionToDownload: latestFromBranch
             artifact: fluidframework-docs
-            path: '$(Build.SourcesDirectory)/docs/public'
-
-        - task: DownloadPipelineArtifact@2
-          displayName: 'Copy fluidframework-docs-api to api folder'
-          inputs:
-            source: specific
-            project: internal
-            pipeline: build-docs
-            branchName: main
-            buildVersionToDownload: latestFromBranch
-            artifact: fluidframework-docs-api
-            path: '$(Build.SourcesDirectory)/docs/api'
+            path: '$(Build.SourcesDirectory)'
 
         - task: AzureStaticWebApp@0
           displayName: 'Deploy website to ASWA'
@@ -82,7 +72,7 @@ stages:
             skip_app_build: true # site was built in previous stage
             skip_api_build: true # api is written in js, no build needed
             cwd: $(Build.SourcesDirectory)
-            app_location: 'docs/public'
-            api_location: 'docs/api'
+            app_location: 'docs-temp/public'
+            api_location: 'docs-temp/api'
             output_location: ''
             azure_static_web_apps_api_token: '${{ variables.deploymentToken }}'
