--- a/packages/framework/collabspaces/package.json
+++ b/packages/framework/collabspaces/package.json
@@ -137,10 +137,12 @@
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.13.3",
 		"@fluid-private/stochastic-test-utils": "workspace:~",
+		"@fluid-private/test-drivers": "workspace:~",
 		"@fluid-tools/build-cli": "^0.29.0",
 		"@fluidframework/aqueduct": "workspace:~",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.29.0",
+		"@fluidframework/container-loader": "workspace:~",
 		"@fluidframework/counter": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
