--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,9 +2,11 @@
 # Each line is a file pattern followed by one or more owners.
 # More details on the format: https://help.github.com/articles/about-codeowners/
 
-# ORDER MATTERS! The last matching pattern has the most precedence.
-
 # When updating this file, you should also consider updating the GitHub label config in actions-labeler.yml so that
 # any area changes are labeled correctly.
 
-# Files in the root
+# ORDER MATTERS! The last matching pattern has the most precedence.
+
+# NOTICE: Ownership via this file will block PR until an owner approves. 
+# Taking ownership requires a commitment to review all PRs for the selected files.
+
