--- a/examples/client-logger/app-insights-logger/tsconfig.json
+++ b/examples/client-logger/app-insights-logger/tsconfig.json
@@ -1,5 +1,8 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
 	"compilerOptions": {
 		"rootDir": "src",
 		"outDir": "dist",
