--- a/examples/data-objects/canvas/tsconfig.json
+++ b/examples/data-objects/canvas/tsconfig.json
@@ -1,5 +1,8 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
 	"compilerOptions": {
 		"module": "esnext",
 		"outDir": "lib",
@@ -12,6 +15,7 @@
 			"react",
 			"react-dom",
 		],
+		"rootDir": "./src",
 	},
 	"include": ["src/**/*"],
 }
