--- a/examples/data-objects/codemirror/tsconfig.json
+++ b/examples/data-objects/codemirror/tsconfig.json
@@ -1,11 +1,15 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
 	"compilerOptions": {
 		"target": "es6",
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
 		"types": ["node", "react"],
+		"rootDir": "./src",
 	},
 	"include": ["src/**/*"],
 }
