--- a/examples/benchmarks/bubblebench/common/tsconfig.json
+++ b/examples/benchmarks/bubblebench/common/tsconfig.json
@@ -1,12 +1,14 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
-		"module": "esnext",
-		"lib": ["ESNext", "DOM"],
+		"rootDir": "./src",
 		"outDir": "dist",
-		"jsx": "react",
+		"lib": ["ESNext", "DOM"],
 		"types": ["mocha", "react", "react-dom"],
 	},
-	"include": ["src/**/*"],
 }
