--- a/examples/client-logger/app-insights-logger/package.json
+++ b/examples/client-logger/app-insights-logger/package.json
@@ -12,6 +12,7 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"sideEffects": false,
+  "type": "commonjs",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
