--- a/examples/apps/data-object-grid/tsconfig.json
+++ b/examples/apps/data-object-grid/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
 		"target": "es6",
 		"outDir": "lib",
-		"jsx": "react",
 		"types": [
 			"jest",
 			"puppeteer",
@@ -14,5 +16,4 @@
 			"react-dom",
 		],
 	},
-	"include": ["src/**/*"],
 }
