--- a/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
+++ b/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
@@ -1,11 +1,14 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
-		"module": "esnext",
-		"lib": ["ESNext", "DOM"],
+        "rootDir": "./src",
 		"outDir": "dist",
-		"jsx": "react",
+		"lib": ["ESNext", "DOM"],
 		"noImplicitAny": true,
 		"resolveJsonModule": true,
 		"types": [
@@ -17,5 +20,4 @@
 			"expect-puppeteer",
 		],
 	},
-	"include": ["src/**/*"],
 }
