--- a/examples/benchmarks/tablebench/tsconfig.json
+++ b/examples/benchmarks/tablebench/tsconfig.json
@@ -1,12 +1,13 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.test.json",
+	],
+  "include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
-		"composite": true,
-		"noImplicitAny": true,
 		"noImplicitOverride": true,
 	},
-	"include": ["src/**/*"],
 }
