--- a/examples/data-objects/codemirror/tsconfig.json
+++ b/examples/data-objects/codemirror/tsconfig.json
@@ -1,11 +1,13 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "lib",
 		"target": "es6",
-		"module": "esnext",
-		"outDir": "lib",
-		"jsx": "react",
 		"types": ["node", "react"],
 	},
-	"include": ["src/**/*"],
 }
