--- a/examples/data-objects/monaco/tsconfig.json
+++ b/examples/data-objects/monaco/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
+    "rootDir": "./src",
 		"outDir": "lib",
-		"jsx": "react",
 		"types": ["react"],
 	},
-	"include": ["src/**/*"],
 }
