--- a/examples/data-objects/todo/tsconfig.json
+++ b/examples/data-objects/todo/tsconfig.json
@@ -1,9 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
+    "rootDir": "./src",
 		"outDir": "lib",
-		"jsx": "react",
 		"types": [
 			"react",
 			"react-dom",
@@ -13,5 +16,4 @@
 			"expect-puppeteer",
 		],
 	},
-	"include": ["src/**/*"],
 }
