--- a/examples/external-data/tsconfig.json
+++ b/examples/external-data/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../common/build/build-common/tsconfig.base.json",
+		"../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*", "tests/**/*"],
 	"compilerOptions": {
 		"outDir": "dist",
-		"jsx": "react",
 		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer", "react"],
 	},
-	"include": ["src/**/*", "tests/**/*"],
 	"lib": ["dom"],
 }
