--- a/examples/service-clients/odsp-client/shared-tree-demo/tsconfig.json
+++ b/examples/service-clients/odsp-client/shared-tree-demo/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*", "tests/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
+    "rootDir": "./src",
 		"outDir": "lib",
-		"jsx": "react",
 		"types": ["react", "react-dom"],
 	},
-	"include": ["src/**/*", "tests/**/*"],
 }
