--- a/examples/view-integration/external-views/tsconfig.json
+++ b/examples/view-integration/external-views/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*", "tests/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
+    "rootDir": "./src",
 		"outDir": "lib",
-		"jsx": "react",
 		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
 	},
-	"include": ["src/**/*", "tests/**/*"],
 }
