--- a/examples/apps/attributable-map/tsconfig.json
+++ b/examples/apps/attributable-map/tsconfig.json
@@ -5,6 +5,7 @@
 	],
 	"include": ["src/**/*"],
 	"compilerOptions": {
+		"rootDir": "./src",
 		"outDir": "lib",
 		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
 	},
