--- a/examples/apps/data-object-grid/tsconfig.json
+++ b/examples/apps/data-object-grid/tsconfig.json
@@ -5,8 +5,9 @@
 	],
 	"include": ["src/**/*"],
 	"compilerOptions": {
-		"target": "es6",
+		"rootDir": "./src",
 		"outDir": "lib",
+		"target": "es6",
 		"types": [
 			"jest",
 			"puppeteer",
