--- a/examples/benchmarks/tablebench/tsconfig.json
+++ b/examples/benchmarks/tablebench/tsconfig.json
@@ -8,6 +8,7 @@
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
+		"noImplicitAny": true,
 		"noImplicitOverride": true,
 	},
 }
