update code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,5 +32,7 @@
 /packages/dds/merge-tree                   @microsoft/fluid-cr-merge-tree
 /packages/dds/matrix                       @microsoft/fluid-cr-merge-tree
 /packages/dds/sequence                     @microsoft/fluid-cr-merge-tree
+/packages/dds/tree                         @microsoft/fluid-cr-tree
 /experimental/dds/sequence-deprecated      @microsoft/fluid-cr-merge-tree
+/experimental/dds/tree                     @microsoft/fluid-cr-tree
 
