Update ID compressor code owners (#19504)
Add code owners for the compressor.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,6 +32,9 @@
 #
 # ------------------------------------------------------------------------
 
+# ID compressor
+/packages/runtime/id-compressor            @microsoft/fluid-cr-id-compressor
+
 # merge tree and merge tree related dds
 /packages/dds/merge-tree                   @microsoft/fluid-cr-merge-tree
 /packages/dds/matrix                       @microsoft/fluid-cr-merge-tree
