--- a/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
+++ b/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
@@ -8,14 +8,7 @@
 		"jsx": "react",
 		"noImplicitAny": true,
 		"resolveJsonModule": true,
-		"types": [
-			"react",
-			"react-dom",
-			"jest",
-			"puppeteer",
-			"jest-environment-puppeteer",
-			"expect-puppeteer",
-		],
+		"types": ["react", "react-dom", "jest", "puppeteer", "jest-environment-puppeteer"],
 	},
 	"include": ["src/**/*"],
 }
