--- a/examples/external-data/tsconfig.json
+++ b/examples/external-data/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"jsx": "react",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer", "react"],
+		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "react"],
 	},
 	"include": ["src/**/*", "tests/**/*"],
 	"lib": ["dom"],
