--- a/examples/apps/presence-tracker/tsconfig.json
+++ b/examples/apps/presence-tracker/tsconfig.json
@@ -4,7 +4,7 @@
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
+		"types": ["jest", "puppeteer", "jest-environment-puppeteer"],
 	},
 	"include": ["src/**/*", "tests/**/*"],
 }
