--- a/examples/benchmarks/bubblebench/sharedtree/tsconfig.json
+++ b/examples/benchmarks/bubblebench/sharedtree/tsconfig.json
@@ -6,14 +6,7 @@
 		"lib": ["ESNext", "DOM"],
 		"outDir": "dist",
 		"jsx": "react",
-		"types": [
-			"react",
-			"react-dom",
-			"jest",
-			"puppeteer",
-			"jest-environment-puppeteer",
-			"expect-puppeteer",
-		],
+		"types": ["react", "react-dom", "jest", "puppeteer", "jest-environment-puppeteer"],
 	},
 	"include": ["src/**/*"],
 }
