--- a/experimental/PropertyDDS/examples/property-inspector/tsconfig.json
+++ b/experimental/PropertyDDS/examples/property-inspector/tsconfig.json
@@ -6,7 +6,7 @@
 		"module": "esnext",
 		"outDir": "dist",
 		"jsx": "react",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
+		"types": ["jest", "puppeteer", "jest-environment-puppeteer"],
 	},
 	"include": ["src/**/*", "tests/**/*"],
 }
