fix expect-puppeteer deps

--- a/examples/apps/collaborative-textarea/tsconfig.json
+++ b/examples/apps/collaborative-textarea/tsconfig.json
@@ -4,7 +4,14 @@
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "react", "react-dom"],
+		"types": [
+			"jest",
+			"puppeteer",
+			"jest-environment-puppeteer",
+			"expect-puppeteer",
+			"react",
+			"react-dom",
+		],
 	},
 	"include": ["src/**/*"],
 }
