--- a/examples/apps/data-object-grid/package.json
+++ b/examples/apps/data-object-grid/package.json
@@ -81,6 +81,7 @@
 		"cross-env": "^7.0.3",
 		"css-loader": "^1.0.0",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"html-loader": "^3.1.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
