--- a/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
+++ b/examples/benchmarks/bubblebench/editable-shared-tree/tsconfig.json
@@ -8,7 +8,14 @@
 		"jsx": "react",
 		"noImplicitAny": true,
 		"resolveJsonModule": true,
-		"types": ["react", "react-dom", "jest", "puppeteer", "jest-environment-puppeteer"],
+		"types": [
+			"react",
+			"react-dom",
+			"jest",
+			"puppeteer",
+			"jest-environment-puppeteer",
+			"expect-puppeteer",
+		],
 	},
 	"include": ["src/**/*"],
 }
