--- a/examples/apps/data-object-grid/tsconfig.json
+++ b/examples/apps/data-object-grid/tsconfig.json
@@ -5,7 +5,14 @@
 		"target": "es6",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "react", "react-dom"],
+		"types": [
+			"jest",
+			"puppeteer",
+			"jest-environment-puppeteer",
+			"expect-puppeteer",
+			"react",
+			"react-dom",
+		],
 	},
 	"include": ["src/**/*"],
 }
