--- a/examples/benchmarks/bubblebench/ot/tsconfig.json
+++ b/examples/benchmarks/bubblebench/ot/tsconfig.json
@@ -6,7 +6,14 @@
 		"lib": ["ESNext", "DOM"],
 		"outDir": "dist",
 		"jsx": "react",
-		"types": ["react", "react-dom", "jest", "puppeteer", "jest-environment-puppeteer"],
+		"types": [
+			"react",
+			"react-dom",
+			"jest",
+			"puppeteer",
+			"jest-environment-puppeteer",
+			"expect-puppeteer",
+		],
 	},
 	"include": ["src/**/*"],
 }
