--- a/examples/benchmarks/bubblebench/sharedtree/package.json
+++ b/examples/benchmarks/bubblebench/sharedtree/package.json
@@ -64,6 +64,7 @@
 		"@types/react-dom": "^17.0.18",
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
