--- a/examples/data-objects/multiview/coordinate-model/package.json
+++ b/examples/data-objects/multiview/coordinate-model/package.json
@@ -55,6 +55,7 @@
 		"@types/node": "^18.19.0",
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
