--- a/examples/data-objects/multiview/interface/package.json
+++ b/examples/data-objects/multiview/interface/package.json
@@ -39,6 +39,7 @@
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.18",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
 		"puppeteer": "^22.0.0",
 		"rimraf": "^4.4.0",
