--- a/examples/data-objects/multiview/interface/tsconfig.json
+++ b/examples/data-objects/multiview/interface/tsconfig.json
@@ -4,7 +4,7 @@
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["react", "react-dom", "puppeteer"],
+		"types": ["react", "react-dom", "puppeteer", "expect-puppeteer"],
 	},
 	"include": ["src/**/*"],
 }
