--- a/examples/data-objects/multiview/slider-coordinate-view/tsconfig.json
+++ b/examples/data-objects/multiview/slider-coordinate-view/tsconfig.json
@@ -4,7 +4,14 @@
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["react", "react-dom", "jest", "puppeteer", "jest-environment-puppeteer"],
+		"types": [
+			"react",
+			"react-dom",
+			"jest",
+			"puppeteer",
+			"jest-environment-puppeteer",
+			"expect-puppeteer",
+		],
 	},
 	"include": ["src/**/*"],
 }
