--- a/examples/data-objects/todo/package.json
+++ b/examples/data-objects/todo/package.json
@@ -70,6 +70,7 @@
 		"cross-env": "^7.0.3",
 		"css-loader": "^1.0.0",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
