--- a/examples/external-data/package.json
+++ b/examples/external-data/package.json
@@ -100,6 +100,7 @@
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
 		"eslint-config-prettier": "~9.0.0",
+		"expect-puppeteer": "^9.0.2",
 		"good-fences": "^1.1.1",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
