--- a/examples/service-clients/azure-client/external-controller/tsconfig.json
+++ b/examples/service-clients/azure-client/external-controller/tsconfig.json
@@ -7,7 +7,7 @@
 	"compilerOptions": {
 		"module": "esnext",
 		"outDir": "dist",
-		"types": ["jest", "puppeteer", "jest-environment-puppeteer"],
+		"types": ["jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
 	},
 	"include": ["src/**/*", "tests/**/*"],
 }
