--- a/examples/view-integration/external-views/package.json
+++ b/examples/view-integration/external-views/package.json
@@ -56,6 +56,7 @@
 		"clean-webpack-plugin": "^4.0.0",
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
