--- a/experimental/PropertyDDS/examples/property-inspector/package.json
+++ b/experimental/PropertyDDS/examples/property-inspector/package.json
@@ -88,6 +88,7 @@
 		"cross-env": "^7.0.3",
 		"css-loader": "^1.0.0",
 		"eslint": "~8.50.0",
+		"expect-puppeteer": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
