--- a/packages/tools/devtools/devtools-browser-extension/package.json
+++ b/packages/tools/devtools/devtools-browser-extension/package.json
@@ -116,6 +116,7 @@
 		"eslint": "~8.50.0",
 		"eslint-config-prettier": "~9.0.0",
 		"eslint-plugin-chai-expect": "~3.0.0",
+		"expect-puppeteer": "^9.0.2",
 		"good-fences": "^1.1.1",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
