Remove OpStorage export from replay-driver

--- a/packages/drivers/replay-driver/package.json
+++ b/packages/drivers/replay-driver/package.json
@@ -136,6 +136,10 @@
 		"broken": {
 			"ClassDeclaration_ReplayDocumentService": {
 				"forwardCompat": false
+			},
+			"RemovedClassDeclaration_OpStorage": {
+				"backCompat": false,
+				"forwardCompat": false
 			}
 		}
 	}
