PR fixes and moved logic from view to extension

--- a/packages/tools/devtools/devtools-view/package.json
+++ b/packages/tools/devtools/devtools-view/package.json
@@ -60,13 +60,11 @@
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/protocol-definitions": "^3.2.0-231454",
 		"@fluidframework/telemetry-utils": "workspace:~",
-		"@types/uuid": "^9.0.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-split-pane": "^0.1.92",
 		"recharts": "^2.7.2",
-		"scheduler": "^0.20.0",
-		"uuid": "^9.0.0"
+		"scheduler": "^0.20.0"
 	},
 	"devDependencies": {
 		"@fluidframework/build-common": "^2.0.3",
