build(client): remove @types/jest-environment-puppeteer  -> jest-environment-puppeteer where possible
 in some cases @types was preserved for build

--- a/experimental/PropertyDDS/examples/property-inspector/package.json
+++ b/experimental/PropertyDDS/examples/property-inspector/package.json
@@ -70,6 +70,7 @@
 		"@material-ui/core": "4.12.4",
 		"@material-ui/lab": "4.0.0-alpha.61",
 		"@material-ui/styles": "4.11.5",
+		"@types/jest-environment-puppeteer": "5.0.6",
 		"events": "^3.1.0",
 		"jsonwebtoken": "^8.4.0",
 		"lodash": "^4.17.21",
@@ -81,7 +82,6 @@
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.29.0",
 		"@types/jest": "29.5.3",
-		"@types/jest-environment-puppeteer": "5.0.6",
 		"@types/uuid": "^9.0.2",
 		"clean-webpack-plugin": "^4.0.0",
 		"concurrently": "^8.2.1",
@@ -91,6 +91,7 @@
 		"expect-puppeteer": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
