--- a/examples/benchmarks/bubblebench/editable-shared-tree/package.json
+++ b/examples/benchmarks/bubblebench/editable-shared-tree/package.json
@@ -67,6 +67,7 @@
 		"eslint": "~8.50.0",
 		"expect-puppeteer": "^9.0.2",
 		"jest": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
