--- a/examples/data-objects/diceroller/package.json
+++ b/examples/data-objects/diceroller/package.json
@@ -53,7 +53,6 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@types/jest": "29.5.3",
-		"@types/jest-environment-puppeteer": "5.0.6",
 		"@types/node": "^18.19.0",
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.18",
@@ -61,6 +60,7 @@
 		"eslint": "~8.50.0",
 		"expect-puppeteer": "^9.0.2",
 		"jest": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
