--- a/examples/version-migration/same-container/package.json
+++ b/examples/version-migration/same-container/package.json
@@ -56,6 +56,7 @@
 		"@fluidframework/task-manager": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"@fluidframework/tinylicious-driver": "workspace:~",
+		"@types/jest-environment-puppeteer": "5.0.6",
 		"events": "^3.1.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -68,7 +69,6 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@types/jest": "29.5.3",
-		"@types/jest-environment-puppeteer": "5.0.6",
 		"@types/node": "^18.19.0",
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.18",
@@ -81,6 +81,7 @@
 		"expect-puppeteer": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
