--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -118,6 +118,7 @@
 		"eslint": "~8.50.0",
 		"eslint-config-prettier": "~9.0.0",
 		"jest": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"mocha": "^10.2.0",
