--- a/packages/tools/devtools/devtools-example/package.json
+++ b/packages/tools/devtools/devtools-example/package.json
@@ -96,6 +96,7 @@
 		"jest": "^29.6.2",
 		"jest-dev-server": "^4.3.0",
 		"jest-environment-jsdom": "^29.6.2",
+		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"prettier": "~3.0.3",
 		"puppeteer": "^22.0.0",
