--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"ci:build": "fluid-build --task ci:build",
 		"ci:build:docs": "fluid-build --task ci:build:docs",
 		"ci:test:jest": "puppeteer browsers install chrome && npm run test:jest:report",
-		"ci:test:jest:coverage": "c8 --no-clean npm run test:jest:report",
+		"ci:test:jest:coverage": "puppeteer browsers install chrome && c8 --no-clean npm run test:jest:report",
 		"ci:test:mocha": "npm run test:mocha",
 		"ci:test:mocha:coverage": "c8 --no-clean npm run test:mocha -- --timeout 4s",
 		"ci:test:realsvc:local": "pnpm run -r --no-sort --stream --no-bail test:realsvc:local:report",
@@ -346,12 +346,14 @@
 	"pnpm": {
 		"comments": [
 			"nodegit is replaced with an empty package here because it's currently only used by good-fences for features we do not need, and has issues building when changing node versions. See https://github.com/smikula/good-fences/issues/105 for details.",
+			"jest-environment-puppeteer is not providing typing for its globals, but old (stale types) @types/jest-environment-puppeteer will - see https://github.com/argos-ci/jest-puppeteer/issues/568. expect-puppeteer however needs more recent puppeteer types that @types/jest-environment-puppeteer interferes with. So, force any lingering @types/puppeteer to just puppeteer",
 			"codemirror and marked overrides are because simplemde use * versions, and the fully up to date versions of its deps do not work. packageExtensions was tried to fix this, but did not work.",
 			"Fixing the @oclif/core version avoids a large number of peer dep errors since 2.6 adds a prod dep on ts-node and thus a peer dep on @types/node",
 			"sharp <0.32.6 has a vulnerability that Component Governance flags (https://github.com/advisories/GHSA-54xq-cgqr-rpm3). It's a transitive dependency through jssm-viz-cli, which hasn't updated to a version with the fix"
 		],
 		"overrides": {
 			"@types/node@<18": "^18.19.0",
+			"@types/puppeteer": "npm:puppeteer",
 			"node-fetch": "^2.6.9",
 			"good-fences>nodegit": "npm:empty-npm-package@1.0.0",
 			"qs": "^6.11.0",
